# orchestra

./: .build-constraints.txt  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
.claude-plugin/: plugin.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docs-release.yml  push.yml  skill-eval.yml
app/: README.md  app.py  app.yaml  deploy.sh  requirements.txt
docs/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
docs/app/: layout.config.tsx  layout.tsx
docs/app/(home)/: page.tsx
docs/content/docs/: ai-tools-skills.mdx  architecture.mdx  guide.mdx  how-it-works.mdx  index.mdx  installation.mdx  meta.json  options.mdx  usage-guide.mdx
lib/: AGENTS.md
lib/orchestra/: utils.py
lib/orchestra/bundler/: __init__.py  dab_writer.py  inner_job_params.py  notebook_writer.py  prereqs_writer.py  setup_generator.py
lib/orchestra/models/: adf_ast.py  dab.py  ir.py  motifs.py  source_types.py
scripts/: bootstrap.sh
skills/ingest/: SKILL.md
skills/jobs-migration-convert/: SKILL.md
skills/jobs-migration-discover/: SKILL.md
skills/jobs-migration-migrate/: SKILL.md
skills/jobs-migration-package/: SKILL.md
skills/jobs-migration-setup/: SKILL.md
skills/migrate/: SKILL.md
skills/prepare/: SKILL.md
skills/profile/: SKILL.md
skills/setup/: SKILL.md
skills/translate/: SKILL.md
src/: AGENTS.md
src/orchestra/: __init__.py  utils.py
tests/: conftest.py
tests/integration/: conftest.py  test_adf_live.py  test_end_to_end.py  test_golden_output.py  test_path_equivalence.py
tests/unit/: conftest.py  test_adapter.py  test_adf_loader.py  test_bundle_invariants.py  test_bundler.py  test_code_generator.py  test_copy_notify.py  test_dag_equivalence.py  test_expression_parser.py  test_for_each_inner_job_params.py  test_helpers.py  test_ir_rewriter.py  test_merge_agentic.py  test_motifs.py  test_naming.py  test_notebook_writer.py  test_notify.py  test_param_dedup.py  test_preparers.py  test_prereqs_writer.py  test_profile_report.py  test_query_analysis.py  test_reporting_coverage.py  test_reporting_dashboard.py  test_reporting_results.py  test_resolve_field.py  test_translators.py  test_until_agentic_handler.py  test_web_body_and_param_defaults.py  test_workspace_downloader.py
(+184 files in other folders)
