[project]
name = "orchestra"
version = "0.1.0"
description = "ADF to Databricks Lakeflow Jobs translator"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib/orchestra"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
mypy_path = "lib"
