[project]
name = "orchestra"
version = "0.2.0"
description = "ADF to Databricks Lakeflow Jobs translator via Declarative Automation Bundles"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Greg Hansen", email = "gregory.hansen@databricks.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Environment :: Console",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9",
    "coverage>=7.6.1,<8",
    "ruff>=0.14.0,<1",
    "mypy>=1.18.2,<2",
    "types-pyyaml>=6.0.12.20250915,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib/orchestra"]

[tool.mypy]
python_version = "3.12"
mypy_path = "lib"
exclude = ['venv', '.venv', 'tests/*']

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--no-header"
cache_dir = ".venv/pytest-cache"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "integration: marks tests that require live Azure Data Factory access",
    "slow: marks tests that are slow to run",
]

[tool.ruff]
cache-dir = ".venv/ruff-cache"
target-version = "py312"
line-length = 120
exclude = ["templates/*"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["orchestra"]
